tests/custom/STARIS_2022/basic/set-operators/in-type-error-03/stderr.expected
Error:
    Parser error in file: in.essence Error is:
ValidatorError in.essence:2:21:
  |
2 | such that a = (1 in true)
  |                     ^^^^
Type error:
	Expected:"Container of  int"
	Got: bool

